--- a/traefik/conf.d/monit.toml
+++ b/traefik/conf.d/monit.toml
@@ -3,9 +3,14 @@
     [http.routers.monit]
       entryPoints = ["https"]
       middlewares = ["monit-auth"]
-      port = 2812
+      service = "monit"
       rule = "Host(`${TRAEFIK_MONIT_DOMAIN}`)"
 
 [http.middlewares]
   [http.middlewares.monit-auth.basicAuth]
     users = ["${TRAEFIK_MONIT_AUTH}"]
+
+[http.services]
+  [http.services.monit.loadBalancer]
+    [[http.services.monit.loadBalancer.servers]]
+      url = "http://127.0.0.1:2812"
