--- a/redis/redis.session.ini
+++ b/redis/redis.session.ini
@@ -1,3 +1,3 @@
 ; priority: 10
 session.save_handler = redis
-session.save_path = tcp://127.0.0.1:6379?auth=$REDIS_PASSWORD
+session.save_path = "tcp://127.0.0.1:6379?auth=$REDIS_PASSWORD"
