--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -23,6 +23,7 @@
   database = "${INFLUXDB_DATABASE}"
   username = "${INFLUXDB_USERNAME}"
   password = "${INFLUXDB_PASSWORD}"
+  insecure_skip_verify = true
 
 ############
 ## INPUTS ##
