Traefik InfluxDB metrics now goes to Telegraf

--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -28,6 +28,11 @@
 ############
 ## INPUTS ##
 ############
+[[inputs.influxdb_listener]]
+  service_address = ":8186"
+  read_timeout = "10s"
+  write_timeout = "10s"
+
 [[inputs.cpu]]
   percpu = true
   totalcpu = true
