--- a/dovecot/conf.d/ssl.conf
+++ b/dovecot/conf.d/ssl.conf
@@ -4,5 +4,5 @@
 ssl = required
 ssl_client_ca_dir = /etc/ssl/certs
 
-ssl_cert = <${DOVECOT_MAIL_TLS_CERT}
-ssl_key = <${DOVECOT_MAIL_TLS_KEY}
+ssl_cert = <${MAIL_TLS_CERT}
+ssl_key = <${MAIL_TLS_KEY}
