Bug fixes for promtail

--- a/promtail/promtail.yaml
+++ b/promtail/promtail.yaml
@@ -20,10 +20,10 @@ scrape_configs:
       labels:
         job: varlogs
         host: ${SERVER_NAME}
-        __path__: /var/log/{*.log,*/*.log,*/*/*.log}
+        __path__: /var/log/{*.log,*/*.log}
   - job_name: journal
     journal:
-      max_age: 12h
+      max_age: 1h
       labels:
         job: systemd-journal
     relabel_configs:
