--- a/mysql/conf.d/mysqld.cnf
+++ b/mysql/conf.d/mysqld.cnf
@@ -29,6 +29,7 @@ myisam_sort_buffer_size = 128M
 # (RAM * 0.7) * 1024 * 1024 * 1024
 # In this sample we have 1.4GB of RAM in bytes
 innodb_buffer_pool_size = 1503238553
-innodb_log_file_size = 64M
 innodb_flush_log_at_trx_commit = 2
-innodb_log_buffer_size = 10M
+innodb_log_file_size = 124M
+innodb_log_buffer_size = 64M
+innodb_write_io_threads = 10
