New PHP logs location with complete replace of log-rotate script

--- a/php/fpm/pool.d/www.conf
+++ b/php/fpm/pool.d/www.conf
@@ -1,5 +1,5 @@
 [global]
-error_log = /var/log/php/fpm/error.log
+error_log = /var/log/php/error.log
 log_limit = 8192
 
 [www]
@@ -24,10 +24,10 @@ rlimit_files = 8192
 rlimit_core = unlimited
 
 request_slowlog_timeout = 5s
-slowlog = /var/log/php/fpm/slow.log
+slowlog = /var/log/php/slow.log
 
-access.log = /var/log/php/fpm/access.log
+access.log = /var/log/php/access.log
 access.format = '{"time": "%{%Y-%m-%dT%H:%M:%S%z}T", "host": "%{HOSTNAME}e", "remote_addr": "%R", "remote_user": "%u", "server_protocol": "%{SERVER_PROTOCOL}e", "server_port": "%{SERVER_PORT}e", "server_name": "%{SERVER_NAME}e", "request_method": "%m", "request_host": "%{HTTP_HOST}e", "request_uri": "%{REQUEST_URI}e", "request_time": "%d", "status": "%s", "body_bytes_sent": "%l", "http_referrer": "%{HTTP_REFERER}e", "http_user_agent": "%{HTTP_USER_AGENT}e", "http_x_forwarded_for": "%{HTTP_X_FORWARDED_FOR}e", "cpu": "%C", "memory": "%{mega}M", "pool": "%n", "pid": "%P", "cid": "%p"}'
 
-php_admin_value[error_log] = /var/log/php/fpm/error.log
+php_admin_value[error_log] = /var/log/php/error.log
 php_admin_flag[log_errors] = on
