--- a/telegraf/conf.d/php-fpm.conf
+++ b/telegraf/conf.d/php-fpm.conf
@@ -2,7 +2,7 @@
   urls = ["fcgi://127.0.0.1:9000/_status"]
 
 [[inputs.tail]]
-  files = ["/var/log/php/fpm/access.log"]
+  files = ["/var/log/php/access.log"]
   from_beginning = false
   pipe = false
   name_override = "phpfpm_access_log"
