Default priority for traefik rules

--- a/traefik/conf.d/dashboard.toml
+++ b/traefik/conf.d/dashboard.toml
@@ -5,6 +5,7 @@
       middlewares = ["dashboard-auth"]
       service = "api@internal"
       rule = "Host(`${TRAEFIK_DOMAIN}`)"
+      priority = 100
 
 [http.middlewares]
   [http.middlewares.dashboard-auth.basicAuth]
