--- a/loki/loki.yaml
+++ b/loki/loki.yaml
@@ -38,7 +38,7 @@ limits_config:
   reject_old_samples_max_age: 168h
 
 chunk_store_config:
-  max_look_back_period: 0
+  max_look_back_period: 0s
 
 table_manager:
   chunk_tables_provisioning:
@@ -52,4 +52,4 @@ table_manager:
     provisioned_read_throughput: 0
     provisioned_write_throughput: 0
   retention_deletes_enabled: false
-  retention_period: 0
+  retention_period: 0s
