Updated telegraf log parsing for nginx and php-fpm

--- a/telegraf/conf.d/nginx.conf
+++ b/telegraf/conf.d/nginx.conf
@@ -5,6 +5,7 @@
   files = ["/var/log/nginx/access.log"]
   from_beginning = false
   pipe = false
+  character_encoding = "utf-8"
   name_override = "nginx_access_log"
   data_format = "json"
   json_time_key = "time"
@@ -12,7 +13,30 @@
   tag_keys = ["host", "server_port", "request_method", "status", "upstream_status"]
   json_string_fields = ["remote_addr", "remote_user", "server_protocol", "server_name", "request_host", "request_uri", "http_referer", "http_user_agent", "http_x_forwarded_for", "upstream_addr", "upstream_cache_status", "request_length", "request_time", "bytes_sent", "body_bytes_sent", "upstream_connect_time", "upstream_header_time", "upstream_response_time", "upstream_response_length"]
 
+# Fix issues with values printed as "-"
+[[processors.enum]]
+  order = 1
+  namepass = ["nginx_access_log"]
+  [[processors.enum.mapping]]
+    field = "upstream_connect_time"
+    [processors.enum.mapping.value_mappings]
+      - = 0
+  [[processors.enum.mapping]]
+    field = "upstream_header_time"
+    [processors.enum.mapping.value_mappings]
+      - = 0
+  [[processors.enum.mapping]]
+    field = "upstream_response_time"
+    [processors.enum.mapping.value_mappings]
+      - = 0
+  [[processors.enum.mapping]]
+    field = "upstream_response_length"
+    [processors.enum.mapping.value_mappings]
+      - = 0
+
+# Convert values to float
 [[processors.converter]]
+  order = 2
   namepass = ["nginx_access_log"]
   [processors.converter.fields]
     float = ["request_length", "request_time", "bytes_sent", "body_bytes_sent", "upstream_connect_time", "upstream_header_time", "upstream_response_time", "upstream_response_length"]
