--- a/telegraf/conf.d/php-fpm.conf
+++ b/telegraf/conf.d/php-fpm.conf
@@ -5,6 +5,7 @@
   files = ["/var/log/php/access.log"]
   from_beginning = false
   pipe = false
+  character_encoding = "utf-8"
   name_override = "phpfpm_access_log"
   data_format = "json"
   json_time_key = "time"
