New mkcert install

--- a/mkcert/traefik/ssl.toml
+++ b/mkcert/traefik/ssl.toml
@@ -1,5 +1,5 @@
 [tls.stores]
   [tls.stores.default]
     [tls.stores.default.defaultCertificate]
-      certFile = "/etc/ssl/private/local.io.pem"
-      keyFile  = "/etc/ssl/private/local.io.key.pem"
+      certFile = "/etc/traefik/ssl/local.io.pem"
+      keyFile  = "/etc/traefik/ssl/local.io.key.pem"
