Nginx access log buffer

--- a/nginx/conf.d/logs.conf
+++ b/nginx/conf.d/logs.conf
@@ -56,5 +56,5 @@ log_format json escape=json '{'
     '"upstream_response_length": "$the_upstream_response_length" '
     '}';
 
-access_log /var/log/nginx/access.log json;
+access_log /var/log/nginx/access.log json buffer=16k;
 error_log /var/log/nginx/error.log warn;
