--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,6 +16,18 @@ http {
     ##
     charset utf-8;
     source_charset utf-8;
+    charset_types
+        text/html
+        text/css
+        text/xml
+        text/plain
+        text/vnd.wap.wml
+        application/x-javascript
+        application/rss+xml
+        application/javascript
+        application/json
+        image/svg+xml;
+
     set_real_ip_from 127.0.0.1;
     real_ip_header X-Forwarded-For;
     client_max_body_size 100m;
