Better cache control for resourcers

--- a/nginx/global/common/general.conf
+++ b/nginx/global/common/general.conf
@@ -22,7 +22,7 @@ location ~ ^.+\.(js|css|png|jpg|jpeg|gif|ico|webp)$ {
     log_not_found off;
     add_header Pragma public;
     add_header Vary "Accept-Encoding";
-    add_header Cache-Control "public, must-revalidate, proxy-revalidate, no-transform";
+    add_header Cache-Control "public, immutable, proxy-revalidate, no-transform";
     try_files $uri$webp_suffix $uri =404;
 }
 
