Avif image support

--- a/nginx/global/common/general.conf
+++ b/nginx/global/common/general.conf
@@ -15,15 +15,26 @@ location ~ ^.+\.(xml|ogg|ogv|svgz|mp4|rss|atom|zip|tgz|gz|rar|bz2|doc|xls|exe|pp
     expires max;
 }
 
-# Styles, scripts and images (with webp support)
-location ~ ^.+\.(js|css|png|jpg|jpeg|gif|ico|webp)$ {
+# Styles, scripts
+location ~ ^.+\.(js|css)$ {
     access_log off;
     expires max;
     log_not_found off;
     add_header Pragma public;
-    add_header Vary "Accept-Encoding";
     add_header Cache-Control "public, immutable, proxy-revalidate, no-transform";
-    try_files $uri$webp_suffix $uri =404;
+    add_header Vary "Accept-Encoding";
+    try_files $uri =404;
+}
+
+# Images (with webp and avif support)
+location ~ ^.+\.(png|jpg|jpeg|gif|ico|webp|avif)$ {
+    access_log off;
+    expires max;
+    log_not_found off;
+    add_header Pragma public;
+    add_header Cache-Control "public, immutable, proxy-revalidate, no-transform";
+    add_header Vary "Accept-Encoding";
+    try_files $uri$avif_suffix $uri$webp_suffix $uri =404;
 }
 
 # Fix for @font-face
