--- a/php/fpm/pool.d/www.conf
+++ b/php/fpm/pool.d/www.conf
@@ -26,6 +26,8 @@ rlimit_core = unlimited
 request_slowlog_timeout = 5s
 slowlog = /var/log/php/slow.log
 
+; TODO: larger logs causing truncated message.
+; Maybe only fix by recompiling PHP
 access.log = /var/log/php/access.log
 access.format = '{"time": "%{%Y-%m-%dT%H:%M:%S%z}T", "host": "%{HOSTNAME}e", "remote_addr": "%R", "remote_user": "%u", "server_protocol": "%{SERVER_PROTOCOL}e", "server_port": "%{SERVER_PORT}e", "server_name": "%{SERVER_NAME}e", "request_method": "%m", "request_host": "%{HTTP_HOST}e", "request_uri": "%{REQUEST_URI}e", "request_time": "%d", "status": "%s", "body_bytes_sent": "%l", "http_referrer": "%{HTTP_REFERER}e", "http_user_agent": "%{HTTP_USER_AGENT}e", "http_x_forwarded_for": "%{HTTP_X_FORWARDED_FOR}e", "cpu": "%C", "memory": "%{mega}M", "pool": "%n", "pid": "%P", "cid": "%p"}'
 
