Quota removed from mail stack to simplify process

--- a/dovecot/conf.d/lmtp.conf
+++ b/dovecot/conf.d/lmtp.conf
@@ -2,6 +2,6 @@
 ## LMTP specific settings
 ##
 protocol lmtp {
-  postmaster_address = ${DOVECOT_POSTMASTER_MAIL}
+  postmaster_address = ${POSTMASTER_MAIL}
   mail_plugins = $mail_plugins sieve
 }
