New nginx model without the need of server name and main ports because it is intended to run behind traefik

--- a/php/nginx/sites-available/magento.conf
+++ b/php/nginx/sites-available/magento.conf
@@ -2,29 +2,14 @@
 #    server unix:/run/php/php-fpm.sock;
 #}
 
-#server {
-#    listen 80;
-#    listen [::]:80;
-#    server_name .site.com;
-#    rewrite ^/(.*) https://$host/$1 permanent;
-#}
-
 server {
 
-    listen 80;
-    listen [::]:80;
-
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-
-    include snippets/snakeoil.conf;
-    #ssl_dhparam /etc/ssl/private/site.com.pem;
-    #ssl_certificate /etc/letsencrypt/live/site.com/fullchain.pem;
-    #ssl_certificate_key /etc/letsencrypt/live/site.com/privkey.pem;
+    listen 8081;
+    listen [::]:8081;
 
     set $MAGE_ROOT /usr/share/nginx/site.com;
 
-    server_name www.site.com site.com;
+    server_name _;
     root $MAGE_ROOT/pub;
     index index.html index.php;
 
