--- a/nginx/sites-available/default.conf
+++ b/nginx/sites-available/default.conf
@@ -1,24 +1,9 @@
-#server {
-#    listen 80;
-#    listen [::]:80;
-#    server_name .site.com;
-#    rewrite ^/(.*) https://$host/$1 permanent;
-#}
-
 server {
 
-    listen 80;
-    listen [::]:80;
+    listen 8081;
+    listen [::]:8081;
 
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-
-    include snippets/snakeoil.conf;
-    #ssl_dhparam /etc/ssl/private/site.com.pem;
-    #ssl_certificate /etc/letsencrypt/live/site.com/fullchain.pem;
-    #ssl_certificate_key /etc/letsencrypt/live/site.com/privkey.pem;
-
-    server_name www.site.com site.com;
+    server_name _;
     root /usr/share/nginx/site.com/www;
     index index.html;
 
