--- a/php/fpm/pool.d/www.conf
+++ b/php/fpm/pool.d/www.conf
@@ -6,7 +6,9 @@ log_limit = 8192
 user = www-data
 group = www-data
 
-listen = [::]:9000
+listen = /run/php/php-fpm.sock
+listen.owner = www-data
+listen.group = www-data
 
 pm = dynamic
 pm.max_children = 5
