--- a/php/telegraf/php-fpm.conf
+++ b/php/telegraf/php-fpm.conf
@@ -1,5 +1,5 @@
 [[inputs.phpfpm]]
-  urls = ["fcgi://127.0.0.1:9000/_status"]
+  urls = ["/run/php/php-fpm.sock:/_status"]
 
 [[inputs.tail]]
   files = ["/var/log/php/access.log"]
