Revised mail services

--- a/dovecot/conf.d/mail.conf
+++ b/dovecot/conf.d/mail.conf
@@ -21,3 +21,8 @@ last_valid_uid = 5000
 ##
 protocol !indexer-worker {
 }
+
+##
+## Enable quota plugin for tracking and enforcing the quota
+##
+mail_plugins = $mail_plugins quota
