--- a/dovecot/conf.d/imap.conf
+++ b/dovecot/conf.d/imap.conf
@@ -2,5 +2,5 @@
 ## IMAP specific settings
 ##
 protocol imap {
-  mail_plugins = $mail_plugins imap_sieve
+  mail_plugins = $mail_plugins imap_quota imap_sieve
 }
