--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -18,11 +18,6 @@
 ############
 ## INPUTS ##
 ############
-[[inputs.influxdb_listener]]
-  service_address = ":8186"
-  read_timeout = "10s"
-  write_timeout = "10s"
-
 [[inputs.cpu]]
   percpu = true
   totalcpu = true
@@ -49,6 +44,8 @@
 [[inputs.swap]]
 
 [[inputs.system]]
+
+[[inputs.systemd_units]]
 
 [[inputs.net]]
 
