Magento 2 configs updated

--- a/php/nginx/global/magento/entrypoint.conf
+++ b/php/nginx/global/magento/entrypoint.conf
@@ -3,18 +3,30 @@
 ##
 
 # PHP entry point for main application
-location ~ (index|get|static|report|404|503|health_check)\.php$ {
+location ~ ^/(index|get|static|errors/report|errors/404|errors/503|health_check)\.php$ {
 
+    try_files $uri =404;
     include global/common/php.conf;
-    fastcgi_pass fastcgi_backend;
 
-    fastcgi_buffers 1024 4k;
+    fastcgi_pass fastcgi_backend;
     fastcgi_param PHP_FLAG "session.auto_start=off \n suhosin.session.cryptua=off";
     fastcgi_param PHP_VALUE "memory_limit=756M \n max_execution_time=18000";
 
 }
 
+# Errors endpoint
+location /errors/ {
+    location ~* \.xml$ {
+        deny all;
+    }
+}
+
 # Banned locations (only reached if the earlier PHP entry point regexes don't match)
-location ~* (\.php$|\.htaccess$|\.git) {
+location ~* (\.php$|\.phtml$|\.htaccess$|\.git) {
+    deny all;
+}
+
+# Deny access to sensitive files
+location /.user.ini {
     deny all;
 }
