--- a/php/nginx/global/magento/media.conf
+++ b/php/nginx/global/magento/media.conf
@@ -10,7 +10,7 @@ location /media/ {
         deny all;
     }
 
-    location ~* \.(ico|jpg|jpeg|png|gif|svg|js|css|swf|eot|ttf|otf|woff|woff2)$ {
+    location ~* \.(ico|jpg|jpeg|png|gif|svg|svgz|webp|avif|avifs|js|css|eot|ttf|otf|woff|woff2)$ {
         add_header Cache-Control "public";
         add_header X-Frame-Options "SAMEORIGIN";
         expires +1y;
@@ -36,5 +36,9 @@ location /media/downloadable/ {
 }
 
 location /media/import/ {
+    deny all;
+}
+
+location /media/custom_options/ {
     deny all;
 }
