--- a/php/nginx/global/magento/public.conf
+++ b/php/nginx/global/magento/public.conf
@@ -9,7 +9,7 @@ location / {
 
 location /pub/ {
 
-    location ~ ^/pub/media/(downloadable|customer|import|theme_customization/.*\.xml) {
+    location ~ ^/pub/media/(downloadable|customer|import|custom_options|theme_customization/.*\.xml) {
         deny all;
     }
 
