InfluxdDB updated to version 2.x

--- a/influxdb/telegraf/influxdb.conf
+++ b/influxdb/telegraf/influxdb.conf
@@ -1,4 +1,2 @@
-[[inputs.influxdb]]
-  urls = ["${INFLUXDB_URL}/debug/vars"]
-  username = "${INFLUXDB_USERNAME}"
-  password = "${INFLUXDB_PASSWORD}"
+[[inputs.prometheus]]
+  urls = ["${INFLUXDB_URL}/metrics"]
