--- a/influxdb/telegraf/output.conf
+++ b/influxdb/telegraf/output.conf
@@ -1,6 +1,5 @@
-[[outputs.influxdb]]
+[[outputs.influxdb_v2]]
   urls = ["${INFLUXDB_URL}"]
-  database = "${INFLUXDB_DATABASE}"
-  username = "${INFLUXDB_USERNAME}"
-  password = "${INFLUXDB_PASSWORD}"
-  insecure_skip_verify = true
+  token = "${INFLUXDB_TOKEN}"
+  organization = "${INFLUXDB_ORGANIZATION}"
+  bucket = "${INFLUXDB_BUCKET}"
