--- a/rspamd/redis/classifier-bayes.conf
+++ b/rspamd/redis/classifier-bayes.conf
@@ -1,4 +1,6 @@
 autolearn = true;
+new_schema = true;
+expire = 8640000;
 servers = "127.0.0.1";
 backend = "redis";
 password = "${REDIS_PASSWORD}"
